// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="Flex"
  data-test-id="cf-ui-flex"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": undefined,
      "flexDirection": "row",
      "flexWrap": undefined,
      "justifyContent": "center",
      "justifyItems": undefined,
      "justifySelf": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
    }
  }
>
  Flex
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="Flex my-extra-class"
  data-test-id="cf-ui-flex"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": undefined,
      "flexDirection": "row",
      "flexWrap": undefined,
      "justifyContent": "center",
      "justifyItems": undefined,
      "justifySelf": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
    }
  }
>
  Flex
</div>
`;
